--- a/Projeto4/Projeto4.ipynb
+++ b/Projeto4/Projeto4.ipynb
@@ -53,6 +53,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Questão 1**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Bonus***\n",
+    "\n",
+    "Implement the model of complex networks with assortativity by\n",
+    "Xulvi-Brunet-Sokolov and Verify how the assortativity influences the network\n",
+    "resilience against failures and attacks. That is, construct the plots of the\n",
+    "size of the largest component in terms of the fraction of removed nodes\n",
+    "for assortativity values: -0.2, 0 and 0.2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Questão 2**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Questão 3**\n",
+    "\n",
+    "Construct the plot of the fraction of removed nodes (in the SIR dynamics)\n",
+    "versus a centrality measure (degree, betweenness centrality, closeness\n",
+    "centrality, eigenvector centrality, accessibility, k-core and\n",
+    "communicability centrality). Verify which of these measures most\n",
+    "influence the fraction of removed nodes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**a)** Hamsterster friendships"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**b)** C. elegans neural network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**c)** US airport network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Bonus**\n",
+    "\n",
+    "***Verify how the assortativity influences the epidemic\n",
+    "spreading in complex networks for the SIR model.***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
