--- a/Projeto3/Projeto3.ipynb
+++ b/Projeto3/Projeto3.ipynb
@@ -1857,7 +1857,8 @@
     "av_degree = 10 # grau médio\n",
     "k = int(av_degree)# Cada nó está conectado aos k vizinhos mais próximos na topologia em anel\n",
     "p = 0.1 #probabilidade de religação\n",
-    "GWS = nx.watts_strogatz_graph(N, k, p, seed=None)"
+    "GWS = nx.watts_strogatz_graph(N, k, p, seed=None)\n",
+    "# add"
    ]
   }
  ],
