--- a/Projeto4/Projeto4.ipynb
+++ b/Projeto4/Projeto4.ipynb
@@ -1227,18 +1227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of nodes: 3133\n",
-      "Number of edges: 6726\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Human protein network\t\n",
     "Human = nx.Graph()\n",
@@ -1249,7 +1240,7 @@
     "print('Number of nodes:', N)\n",
     "print('Number of edges:', M)\n",
     "\n",
-    "fc = fcritical(Human)\n",
+    "fc1 = fcritical(Human)\n",
     "\n",
     "Sf1, vnf1 = failures(Human)\n",
     "Sa1, vna1 = attacks(Human)"
@@ -1257,40 +1248,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Failed to convert nodes #IDA,IDB to type <class 'int'>.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/networkx/readwrite/edgelist.py\u001b[0m in \u001b[0;36mparse_edgelist\u001b[0;34m(lines, comments, delimiter, create_using, nodetype, data)\u001b[0m\n\u001b[1;32m    264\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 265\u001b[0;31m                 \u001b[0mu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnodetype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    266\u001b[0m                 \u001b[0mv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnodetype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '#IDA'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-65-7226a7f4be54>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# C.elegans protein network 2007\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprtn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGraph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprtn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_edgelist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/home/clayton/Downloads/datas/wi2007.txt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnodetype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'weight'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcomments\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'%'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Read the network\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprtn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove_edges_from\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselfloop_edges\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprtn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprtn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m</home/clayton/anaconda3/lib/python3.7/site-packages/decorator.py:decorator-gen-709>\u001b[0m in \u001b[0;36mread_edgelist\u001b[0;34m(path, comments, delimiter, create_using, nodetype, data, edgetype, encoding)\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/networkx/utils/decorators.py\u001b[0m in \u001b[0;36m_open_file\u001b[0;34m(func_to_be_decorated, *args, **kwargs)\u001b[0m\n\u001b[1;32m    238\u001b[0m         \u001b[0;31m# Finally, we call the original function, making sure to close the fobj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    239\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 240\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc_to_be_decorated\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnew_args\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    241\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    242\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mclose_fobj\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/networkx/readwrite/edgelist.py\u001b[0m in \u001b[0;36mread_edgelist\u001b[0;34m(path, comments, delimiter, create_using, nodetype, data, edgetype, encoding)\u001b[0m\n\u001b[1;32m    367\u001b[0m     return parse_edgelist(lines, comments=comments, delimiter=delimiter,\n\u001b[1;32m    368\u001b[0m                           \u001b[0mcreate_using\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcreate_using\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnodetype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnodetype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 369\u001b[0;31m                           data=data)\n\u001b[0m\u001b[1;32m    370\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    371\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/networkx/readwrite/edgelist.py\u001b[0m in \u001b[0;36mparse_edgelist\u001b[0;34m(lines, comments, delimiter, create_using, nodetype, data)\u001b[0m\n\u001b[1;32m    267\u001b[0m             \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    268\u001b[0m                 raise TypeError(\"Failed to convert nodes %s,%s to type %s.\"\n\u001b[0;32m--> 269\u001b[0;31m                                 % (u, v, nodetype))\n\u001b[0m\u001b[1;32m    270\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    271\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Failed to convert nodes #IDA,IDB to type <class 'int'>."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# C.elegans protein network 2007\n",
     "prtn = nx.Graph()\n",
-    "prtn = nx.read_edgelist(\"/home/clayton/Downloads/datas/wi2007.txt\", nodetype=int, data=('weight',float),comments='%') # Read the network\n",
+    "prtn = nx.read_edgelist(\"/home/clayton/Downloads/datas/wi2007.txt\", nodetype=str) # Read the network\n",
     "prtn.remove_edges_from(nx.selfloop_edges(prtn))\n",
     "N = len(prtn)\n",
     "M = prtn.number_of_edges()\n",
     "print('Number of nodes:', N)\n",
     "print('Number of edges:', M)\n",
     "\n",
-    "fc = fcritical(prtn)\n",
+    "fc2 = fcritical(prtn)\n",
     "\n",
     "Sf2, vnf2 = failures(prtn)\n",
     "Sa2, vna2 = attacks(prtn)\n"
@@ -1304,14 +1275,16 @@
    "source": [
     "# Mosquito interaction network (A. aegypti)\n",
     "Mosqt = nx.Graph()\n",
-    "Mosqt = nx.read_edgelist(\"datas/maayan-vidal/out.txt\", nodetype=int, data=('weight',float),comments='%') # Read the network\n",
+    "df = pd.read_excel('/home/clayton/Downloads/datas/mosq.xls')\n",
+    "Mosqt = nx.from_pandas_edgelist(df, source='Gene1', target='Gene2', edge_attr=None)\n",
+    "Mosqt = Mosqt.to_undirected()\n",
     "Mosqt.remove_edges_from(nx.selfloop_edges(Mosqt))\n",
     "N = len(Mosqt)\n",
     "M = Mosqt.number_of_edges()\n",
     "print('Number of nodes:', N)\n",
     "print('Number of edges:', M)\n",
     "\n",
-    "fc = fcritical(Mosqt)\n",
+    "fc3 = fcritical(Mosqt)\n",
     "\n",
     "Sf3, vnf3 = failures(Mosqt)\n",
     "Sa3, vna3 = attacks(Mosqt)\n"
@@ -1326,8 +1299,11 @@
     "#Analisando as falhas das redes\n",
     "plt.figure()\n",
     "plt.plot(vnf1,Sf1,'-or', label='Human protein network')\n",
-    "plt.plot(vnf2,Sf2,'-or', label='C.elegans protein network 2007')\n",
-    "plt.plot(vnf3,Sf3,'-or', label='Mosquito interaction network')\n",
+    "plt.plot(vnf2,Sf2,'-og', label='C.elegans protein network 2007')\n",
+    "plt.plot(vnf3,Sf3,'-ob', label='Mosquito interaction network')\n",
+    "plt.axvline(x=fc1, color = 'g', label='fc Human')\n",
+    "plt.axvline(x=fc2, color = 'g', label='fc C.elegans')\n",
+    "plt.axvline(x=fc3, color = 'g', label='fc Mosquito')\n",
     "plt.legend()\n",
     "plt.xlabel(\"f\", fontsize=20)\n",
     "plt.ylabel(\"S\", fontsize=20)\n",
@@ -1343,9 +1319,12 @@
    "source": [
     "#Analisando os ataques das redes\n",
     "plt.figure()\n",
-    "plt.plot(vna1,Sa1,'-ob', label='Human protein network')\n",
-    "plt.plot(vna2,Sa2,'-ob', label='C.elegans protein network 2007')\n",
+    "plt.plot(vna1,Sa1,'-or', label='Human protein network')\n",
+    "plt.plot(vna2,Sa2,'-og', label='C.elegans protein network 2007')\n",
     "plt.plot(vna3,Sa3,'-ob', label='Mosquito interaction network')\n",
+    "plt.axvline(x=fc1, color = 'g', label='fc failures')\n",
+    "plt.axvline(x=fc2, color = 'g', label='fc failures')\n",
+    "plt.axvline(x=fc3, color = 'g', label='fc failures')\n",
     "plt.legend()\n",
     "plt.xlabel(\"f\", fontsize=20)\n",
     "plt.ylabel(\"S\", fontsize=20)\n",
